main portrait layout 80% finished

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,8 +10,8 @@
         <item name="android:textSize">30sp</item>
         <item name="android:layout_margin">0.3dp</item>
     </style>
-    <style name="middleNumbers" parent="android:Widget.Material.Button.Borderless">
-        <item name="android:textColor">#fff</item>
+    <style name="middleNumbers" parent="android:Widget.Material.Button.Borderless.Colored">
+        <item name="android:textColor">#ff2d2d2d</item>
         <item name="android:background">#ffeaeaea</item>
         <item name="android:textSize">30sp</item>
         <item name="android:layout_margin">0.3dp</item>
