--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,14 +19,11 @@
             android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
             android:layout_gravity="right"
             android:layout_weight="2"
             android:gravity="center_vertical|right"
             android:text="0"
-            android:textSize="40dp"
+            android:textSize="40sp"
             android:textColor="#ffffffff"/>
 
         <TextView
@@ -37,7 +34,7 @@
             android:id="@+id/writeDetail"
             android:layout_weight="1"
             android:gravity="top|right"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="#f2a4a4a4"
             />
     </LinearLayout>
@@ -157,9 +154,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
             android:orientation="vertical"
             android:background="#ff000000"
             android:focusableInTouchMode="false"
