--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -55,6 +55,16 @@
             android:background="#ff000000"
             android:layout_weight="1"
             >
+
+            <Button
+                style="@style/leftSymbols"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="@string/twoNd"
+                android:textAllCaps="false"
+                android:id="@+id/button2"/>
+
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -62,7 +72,7 @@
                 android:text="@string/power"
                 android:textAllCaps="false"
                 android:id="@+id/buttonPower"
-                style="@style/topSymbols"
+                style="@style/leftSymbols"
                 />
 
             <Button
@@ -72,7 +82,7 @@
                 android:textAllCaps="false"
                 android:text="@string/square"
                 android:id="@+id/buttonRoot"
-                style="@style/topSymbols"
+                style="@style/leftSymbols"
                 />
 
             <Button
@@ -83,19 +93,7 @@
                 android:textAllCaps="false"
                 android:text="@string/factorial"
                 android:capitalize="none"
-                style="@style/topSymbols"
-                />
-
-            <Button
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:id="@+id/buttonLn"
-                android:text="@string/logarithmNat"
-                android:elegantTextHeight="false"
-                android:textAllCaps="false"
-                android:capitalize="none"
-                style="@style/topSymbols"
+                style="@style/leftSymbols"
                 />
 
         </LinearLayout>
@@ -110,44 +108,48 @@
             >
 
             <Button
+                style="@style/leftSymbols"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/buttonSin"
+                android:id="@+id/buttonBracketOpen"
+                android:text="@string/bracketOpen"
+                android:elegantTextHeight="false"
                 android:textAllCaps="false"
-                android:text="@string/sin"
-                style="@style/topSymbols"
-                />
+                android:capitalize="none"/>
 
             <Button
+                style="@style/leftSymbols"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/buttonCos"
+                android:id="@+id/buttonBracketClose"
+                android:text="@string/bracketClose"
+                android:elegantTextHeight="false"
                 android:textAllCaps="false"
-                android:text="@string/cos"
-                style="@style/topSymbols"
-                />
+                android:capitalize="none"/>
 
             <Button
+                style="@style/leftSymbols"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/buttonTan"
+                android:id="@+id/button3"
+                android:text="@string/twoX"
+                android:elegantTextHeight="false"
                 android:textAllCaps="false"
-                android:text="@string/tan"
-                style="@style/topSymbols"
-                />
+                android:capitalize="none"/>
 
             <Button
+                style="@style/leftSymbols"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:id="@+id/button"
+                android:text="@string/logarithmNat"
+                android:elegantTextHeight="false"
                 android:textAllCaps="false"
-                android:id="@+id/buttonLog"
-                android:text="@string/logarithm"
-                style="@style/topSymbols"
-                />
+                android:capitalize="none"/>
 
         </LinearLayout>
 
@@ -362,36 +364,35 @@
                 android:layout_height="0dp"
                 android:orientation="horizontal"
                 android:layout_weight="1"
-                >
+                android:baselineAligned="false">
 
                 <Button
                     android:id="@+id/buttonZero"
                     style="@style/middleNumbers"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="2"
                     android:gravity="center"
                     android:text="@string/zero"
-                    />
+                    android:layout_weight="2"/>
 
                 <Button
                     android:id="@+id/buttonDot"
                     style="@style/middleNumbers"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:text="@string/dot"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:layout_weight="1"/>
 
                 <Button
                     android:id="@+id/buttonEqual"
                     style="@style/rightSymbols"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
                     android:text="@string/equal"
                     android:background="#ff1c90c5"
-                    android:gravity="center"/>
+                    android:gravity="center"
+                    android:layout_weight="1"/>
 
             </LinearLayout>
         </LinearLayout>
