--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -4,10 +4,10 @@
     <style name="AppTheme" parent="android:Theme.Material.NoActionBar.Fullscreen">
         <!-- Customize your theme here. -->
     </style>
-    <style name="topSymbols" parent="android:Widget.Material.Button.Borderless" >
+    <style name="leftSymbols" parent="android:Widget.Material.Button.Borderless" >
         <item name="android:textColor">#fff</item>
         <item name="android:background">#888</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:layout_margin">0.3dp</item>
     </style>
     <style name="middleNumbers" parent="android:Widget.Material.Button.Borderless.Colored">
@@ -20,6 +20,6 @@
         <item name="android:background">#ff1c90c5</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">#fff</item>
-        <item name="android:layout_margin">0.3dp</item>
+        <!--<item name="android:layout_margin">0.3dp</item>-->
     </style>
 </resources>
