--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,10 +5,10 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="topSymbols" parent="android:Widget.DeviceDefault.Button.Borderless" >
+    <style name="leftSymbols" parent="android:Widget.DeviceDefault.Button.Borderless" >
         <item name="android:textColor">#fff</item>
         <item name="android:background">#888</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">25sp</item>
         <item name="android:layout_margin">0.3dp</item>
     </style>
     <style name="middleNumbers" parent="android:Widget.DeviceDefault.Button.Borderless">
