--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,13 +16,12 @@
         android:layout_marginRight="5dp">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewDetail"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="right"
             android:layout_weight="2"
             android:gravity="center_vertical|right"
-            android:text="0"
             android:textSize="40sp"
             android:textColor="#ffffffff"/>
 
@@ -30,11 +29,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="@string/zero"
-            android:id="@+id/writeDetail"
+            android:id="@+id/textViewResult"
             android:layout_weight="1"
             android:gravity="top|right"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textColor="#f2a4a4a4"
             />
     </LinearLayout>
@@ -354,7 +352,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="+"
+                    android:text="@string/plus"
                     android:background="#ff1c90c5"
                     />
             </LinearLayout>
