--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -304,7 +304,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="@string/substraction"
+                    android:text="@string/minus"
                     android:background="#ff1c90c5"
                     />
             </LinearLayout>
