--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,7 +7,7 @@
 
     <style name="leftSymbols" parent="android:Widget.DeviceDefault.Button.Borderless" >
         <item name="android:textColor">#fff</item>
-        <item name="android:background">#888</item>
+        <item name="android:background">#ffb9b9b9</item>
         <item name="android:textSize">25sp</item>
         <item name="android:layout_margin">0.3dp</item>
     </style>
