--- a/app/src/main/res/layout-land/fragment_main.xml
+++ b/app/src/main/res/layout-land/fragment_main.xml
@@ -417,7 +417,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="@string/percent"/>
+                    android:text="@string/modulo"/>
 
                 <Button
                     style="@style/rightSymbols"
