--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,8 +22,13 @@
             android:layout_gravity="right"
             android:layout_weight="2"
             android:gravity="center_vertical|right"
-            android:textSize="40sp"
-            android:textColor="#ffffffff"/>
+            android:textSize="50sp"
+            android:textColor="#ffffffff"
+            android:inputType="text"
+            android:maxLines="1"
+            android:lines="1"
+            android:singleLine="true"
+            android:maxLength="15"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -32,9 +37,14 @@
             android:id="@+id/textViewResult"
             android:layout_weight="1"
             android:gravity="top|right"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:textColor="#f2a4a4a4"
-            />
+            android:linksClickable="false"
+            android:inputType="text"
+            android:lines="1"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:maxLength="15"/>
     </LinearLayout>
 
     <LinearLayout
