--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="android:Theme.Material.NoActionBar.Fullscreen">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
     </style>
     <style name="leftSymbols" parent="android:Widget.Material.Button.Borderless" >
         <item name="android:textColor">#fff</item>
         <item name="android:background">#888</item>
         <item name="android:textSize">25sp</item>
-        <item name="android:layout_margin">0.3dp</item>
+        <item name="android:layout_marginTop">0.3dp</item>
+        <item name="android:layout_marginRight">0.3dp</item>
     </style>
     <style name="middleNumbers" parent="android:Widget.Material.Button.Borderless.Colored">
         <item name="android:textColor">#ff2d2d2d</item>
         <item name="android:background">#ffeaeaea</item>
         <item name="android:textSize">30sp</item>
-        <item name="android:layout_margin">0.3dp</item>
+        <item name="android:layout_marginTop">0.3dp</item>
+        <item name="android:layout_marginRight">0.3dp</item>
     </style>
     <style name="rightSymbols" parent="android:Widget.Material.Button.Borderless">
         <item name="android:background">#ff1c90c5</item>
         <item name="android:textSize">30sp</item>
         <item name="android:textColor">#fff</item>
-        <!--<item name="android:layout_margin">0.3dp</item>-->
+        <item name="android:layout_marginTop">0.3dp</item>
     </style>
 </resources>
