--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,46 +7,43 @@
     android:background="#ff333333"
     android:orientation="vertical"
     tools:context=".MainActivityFragment">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginRight="5dp">
-
-        <TextView
-            android:id="@+id/textViewDetail"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_gravity="right"
-            android:layout_weight="2"
-            android:gravity="center_vertical|right"
-            android:textSize="50sp"
-            android:textColor="#ffffffff"
-            android:inputType="text"
-            android:maxLines="1"
-            android:lines="1"
-            android:singleLine="true"
-            android:maxLength="15"/>
+            android:layout_weight="3"
+            android:layout_marginRight="5dp">
+            <TextView
+                android:id="@+id/textViewDetail"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="right"
+                android:layout_weight="2"
+                android:gravity="center_vertical|right"
+                android:textSize="80sp"
+                android:textColor="#ffffffff"
+                android:inputType="text"
+                android:maxLines="1"
+                android:lines="1"
+                android:singleLine="true"
+                android:maxLength="15"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/textViewResult"
-            android:layout_weight="1"
-            android:gravity="top|right"
-            android:textSize="35sp"
-            android:textColor="#f2a4a4a4"
-            android:linksClickable="false"
-            android:inputType="text"
-            android:lines="1"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:maxLength="15"/>
-    </LinearLayout>
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:id="@+id/textViewResult"
+                android:layout_weight="1"
+                android:gravity="top|right"
+                android:textSize="60sp"
+                android:textColor="#f2a4a4a4"
+                android:linksClickable="false"
+                android:inputType="text"
+                android:lines="1"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:maxLength="15"/>
+        </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -142,7 +139,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/button3"
+                android:id="@+id/buttonTwoPowN"
                 android:text="@string/twoX"
                 android:elegantTextHeight="false"
                 android:textAllCaps="false"
@@ -153,8 +150,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:id="@+id/button"
-                android:text="@string/logarithmNat"
+                android:id="@+id/buttonLogarithm"
+                android:text="@string/logarithm"
                 android:elegantTextHeight="false"
                 android:textAllCaps="false"
                 android:capitalize="none"/>
