--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -33,7 +33,8 @@
                 android:textColorLink="@android:color/transparent"
                 android:textAllCaps="false"
                 android:textStyle="normal"
-                android:selectAllOnFocus="false"/>
+                android:selectAllOnFocus="false"
+                android:hint="0"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -49,7 +50,8 @@
                 android:lines="1"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:maxLength="15"/>
+                android:maxLength="15"
+                android:hint="0"/>
         </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
@@ -92,7 +94,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:textAllCaps="false"
-                android:text="@string/square"
+                android:text="@string/root"
                 android:id="@+id/buttonRoot"
                 style="@style/leftSymbols"
                 />
