--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme" parent="android:Theme.Material.NoActionBar.Fullscreen">
         <!-- Customize your theme here. -->
     </style>
     <style name="leftSymbols" parent="android:Widget.Material.Button.Borderless" >
