--- a/app/src/main/res/layout-v21/fragment_main.xml
+++ b/app/src/main/res/layout-v21/fragment_main.xml
@@ -13,29 +13,31 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:layout_marginRight="5dp">
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="15dp">
             <TextView
                 android:id="@+id/textViewDetail"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_gravity="right"
-                android:layout_weight="2"
-                android:gravity="center_vertical|right"
+                android:layout_weight="1"
                 android:textSize="50sp"
                 android:textColor="#ffffffff"
                 android:inputType="textNoSuggestions|text"
                 android:maxLines="1"
                 android:lines="1"
-                android:singleLine="true"
-                android:maxLength="15"
                 android:hapticFeedbackEnabled="false"
                 android:textIsSelectable="false"
                 android:textColorHighlight="@android:color/transparent"
                 android:textColorLink="@android:color/transparent"
-                android:textAllCaps="false"
                 android:textStyle="normal"
                 android:selectAllOnFocus="false"
-                android:hint="0"/>
+                android:hint="0"
+                android:scrollHorizontally="true"
+                android:verticalScrollbarPosition="right"
+                android:gravity="bottom|clip_vertical|right"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"
+                />
 
             <TextView
                 android:layout_width="match_parent"
@@ -43,16 +45,24 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/textViewResult"
                 android:layout_weight="1"
-                android:gravity="top|right"
+                android:gravity="bottom|right"
                 android:textSize="30sp"
                 android:textColor="#f2a4a4a4"
                 android:linksClickable="false"
-                android:inputType="text"
+                android:inputType="textNoSuggestions|text"
                 android:lines="1"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:maxLength="15"
-                android:hint="0"/>
+                android:hint="0"
+                android:isScrollContainer="false"
+                android:scrollbars="none"
+                android:scrollHorizontally="true"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:verticalScrollbarPosition="defaultPosition"
+                android:scrollbarAlwaysDrawHorizontalTrack="false"
+                android:scrollbarAlwaysDrawVerticalTrack="false"
+                android:text="@string/zero"/>
         </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
