--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,27 +7,27 @@
     android:background="#ff333333"
     android:orientation="vertical"
     tools:context=".MainActivityFragment"
-    style="@android:style/Theme.Material">
+    >
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="3"
-            android:layout_marginRight="5dp">
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="15dp">
             <TextView
                 android:id="@+id/textViewDetail"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_gravity="right"
-                android:layout_weight="2"
-                android:gravity="center_vertical|right"
+                android:layout_weight="1"
+                android:gravity="bottom|right"
                 android:textSize="50sp"
                 android:textColor="#ffffffff"
                 android:inputType="textNoSuggestions|text"
                 android:maxLines="1"
                 android:lines="1"
                 android:singleLine="true"
-                android:maxLength="15"
                 android:hapticFeedbackEnabled="false"
                 android:textIsSelectable="false"
                 android:textColorHighlight="@android:color/transparent"
@@ -35,7 +35,9 @@
                 android:textAllCaps="false"
                 android:textStyle="normal"
                 android:selectAllOnFocus="false"
-                android:hint="0"/>
+                android:hint="0"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -43,7 +45,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/textViewResult"
                 android:layout_weight="1"
-                android:gravity="top|right"
+                android:gravity="bottom|right"
                 android:textSize="30sp"
                 android:textColor="#f2a4a4a4"
                 android:linksClickable="false"
@@ -51,8 +53,10 @@
                 android:lines="1"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:maxLength="15"
-                android:hint="0"/>
+                android:hint="0"
+                android:text="@string/zero"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp"/>
         </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
